Update UI.